--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 285 points<br>
+Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 288 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -29,6 +29,7 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Cathedral Architect (Level 1)</div>  <div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
+<li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -86,22 +87,22 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-15912 rev-parse
+15982 rev-parse
 1659 stash
-1530 config
- 457 status
- 249 commit
- 231 push
- 182 checkout
- 129 add
-  71 branch
+1600 config
+ 461 status
+ 251 commit
+ 232 push
+ 184 checkout
+ 134 add
+  74 branch
   55 diff
   54 pull
-  40 rebase
+  41 rebase
   33 merge
   27 reset
-  26 remote
-  22 fetch
+  27 remote
+  23 fetch
   17 achievements
   11 mv
   11 flow
@@ -113,8 +114,8 @@ Git commands sorted by usage:
    5 show
    5 init
    4 symbolic-ref
+   4 gc
    3 revert
-   3 gc
    3 blame
    2 tag
    2 show-branch
