--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 297 points<br>
+Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 301 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -38,6 +38,7 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
+<li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Pedantic (Level 1)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Pedantic (Level 2)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Apprentice Pedantic (Level 3)</div>  <div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
@@ -88,32 +89,32 @@ Unlocked       24/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-16144 rev-parse
-1659 stash
-1608 config
- 465 status
- 256 commit
- 234 push
+16611 rev-parse
+1731 config
+1665 stash
+ 488 status
+ 273 commit
+ 249 push
  186 checkout
- 136 add
-  75 branch
-  57 diff
+ 148 add
+  76 branch
+  65 diff
   54 pull
   41 rebase
+  33 remote
   33 merge
   28 reset
-  28 remote
-  24 fetch
+  25 fetch
   17 achievements
-  12 log
+  13 log
   11 mv
   11 flow
+   9 init
    8 rm
    7 clone
    7 cherry-pick
    5 submodule
    5 show
-   5 init
    4 symbolic-ref
    4 gc
    3 revert
